--- a/custom.scss
+++ b/custom.scss
@@ -11,7 +11,7 @@ $link-color: #00BED5;
 $presentation-heading-color: #000000;
 $code-color: green;
 $text-muted: #656565;
-$code-block-bg: #2c2c2c;
+$code-block-bg: #ffffff;
 $code-block-border-color: #000000;
 $font-family-sans-serif: "Slate Pro Condensed", Helvetica, sans-serif !default;
 $font-family-monospace: "Comic Code Ligatures", SFMono-Regular, Menlo, Monaco, Consolas, monospace !default;
